add list item in form transactions

--- a/views/cms-dashboard.item.ejs
+++ b/views/cms-dashboard.item.ejs
@@ -122,7 +122,7 @@
 												</div>
 
 												<div class="col_full nobottommargin">
-													<button class="button button-rounded nomargin" id="item-form" name="item-form-submit" type="submit" value="register">Submit</button>
+													<button class="button button-rounded nomargin" id="item-form-submit" name="item-form-submit" type="submit" value="register">Submit</button>
 												</div>
 											</form>
 										</div>
@@ -160,7 +160,7 @@
 					<thead>
 					<tr>
 						<th>Item Name
-					</th>					
+					</th>
 
 
 					</tr>
