--- a/views/home.ejs
+++ b/views/home.ejs
@@ -196,8 +196,8 @@
 
 
 																		<td class="cart-product-name">
-																			<select class="selectpicker">
-	  <option>Mustard</option>
+																			<select class="selectpicker form-control">
+	  <option>Mustardddddddddddddddd</option>
 	  <option>Ketchup</option>
 	  <option>Relish</option>
 	</select>
@@ -256,7 +256,7 @@
 
 
 																	</tr>
-																	<span id="btn-plus" class="button button-3d nomargin fright"><i class="icon-line-circle-plus"></i></span>
+
 
 																	<div class="col-xs-6">
 																			<label class="font-body capitalize" for="transactions-type">Transactions Type</label>
@@ -265,6 +265,9 @@
 																		<option value="Real">Real</option>
 																		<option value="Estimation">Estimation</option>
 																		</select>
+																	</div>
+																	<div class="col-xs-6">
+																		<span id="btn-plus" class="fright"><i class="i-circled icon-line-circle-plus" style="background-color:#83c441"></i></span>
 																	</div>
 
 
