--- a/views/cms-dashboard.gudang.ejs
+++ b/views/cms-dashboard.gudang.ejs
@@ -260,7 +260,7 @@
 	$(document).ready(function() {
 					function setPicOption() {
 						$.ajax({
-							url: '/api/users',
+							url: '/api/users/filter/active',
 							type: 'GET',
 							success: function(result) {
 								if(result.success){
