--- a/views/home.ejs
+++ b/views/home.ejs
@@ -159,19 +159,19 @@
 											<div id="processTabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all ">
 												<ul class="process-steps bottommargin clearfix ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all" role="tablist">
 							<li class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="ptab1" aria-labelledby="ui-id-1" aria-selected="true" aria-expanded="true">
-								<a href="#ptab1" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-1">1</a>
+								<button href="#ptab1" disabled="disabled"  class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-1">1</button>
 								<h5>Items Detail</h5>
 							</li>
 							<li class="ui-state-default ui-corner-top ui-state-disabled" role="tab" tabindex="-1" aria-controls="ptab2" aria-labelledby="ui-id-2" aria-selected="false" aria-expanded="false">
-								<a href="#ptab2" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-2">2</a>
+								<button href="#ptab2"  disabled="disabled"  class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-2">2</button>
 								<h5>Account Detail</h5>
 							</li>
 							<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab3" aria-labelledby="ui-id-3" aria-selected="false" aria-expanded="false">
-								<a href="#ptab3" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-3">3</a>
+								<button href="#ptab3"   disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-3">3</button>
 								<h5>Summary</h5>
 							</li>
 							<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab4" aria-labelledby="ui-id-4" aria-selected="false" aria-expanded="false">
-								<a href="#ptab4" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-4">4</a>
+								<button href="#ptab4" disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-4">4</button>
 								<h5>Complete</h5>
 							</li>
 						</ul>
@@ -299,7 +299,7 @@
 
 														<div class="line"></div>
 														<a href="#" class="button button-3d nomargin tab-linker" rel="1">Previous</a>
-														<a href="#" class="button button-3d nomargin fright tab-linker" rel="3">Next</a>
+														<a href="#" class="button button-3d nomargin fright tab-linker" rel="3" >Next</a>
 													</div>
 													<div id="ptab3" aria-labelledby="ui-id-3" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-hidden="true" style="display: none;">
 														<div class="form-group">
