disabled another step tabs click

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -158,19 +158,19 @@
 										<div class="tab-content clearfix ui-tabs-panel ui-widget-content ui-corner-bottom " id="tabs-transaction" aria-labelledby="ui-id-22" role="tabpanel" aria-hidden="true" style="display: none;">
 											<div id="processTabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all ">
 												<ul class="process-steps bottommargin clearfix ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all" role="tablist">
-							<li class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="ptab1" aria-labelledby="ui-id-1" aria-selected="true" aria-expanded="true">
-								<button href="#ptab1" disabled="disabled"  class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-1">1</button>
+							<li id="li1" class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="ptab1" aria-labelledby="ui-id-1" aria-selected="true" aria-expanded="true">
+								<a href="#ptab1" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-1">1</a>
 								<h5>Items Detail</h5>
 							</li>
-							<li class="ui-state-default ui-corner-top ui-state-disabled" role="tab" tabindex="-1" aria-controls="ptab2" aria-labelledby="ui-id-2" aria-selected="false" aria-expanded="false">
-								<button href="#ptab2"  disabled="disabled"  class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-2">2</button>
+							<li id="li2" class="ui-state-default ui-corner-top ui-state-disabled" role="tab" tabindex="-1" aria-controls="ptab2" aria-labelledby="ui-id-2" aria-selected="false" aria-expanded="false">
+								<a href="#ptab2" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-2">2</a>
 								<h5>Account Detail</h5>
 							</li>
-							<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab3" aria-labelledby="ui-id-3" aria-selected="false" aria-expanded="false">
+							<li id="li3" class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab3" aria-labelledby="ui-id-3" aria-selected="false" aria-expanded="false">
 								<button href="#ptab3"   disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-3">3</button>
 								<h5>Summary</h5>
 							</li>
-							<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab4" aria-labelledby="ui-id-4" aria-selected="false" aria-expanded="false">
+							<li id="li4" class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab4" aria-labelledby="ui-id-4" aria-selected="false" aria-expanded="false">
 								<button href="#ptab4" disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-4">4</button>
 								<h5>Complete</h5>
 							</li>
@@ -271,7 +271,7 @@
 
 														</div>
 
-														<a href="#" class="button button-3d nomargin fright tab-linker" rel="2">Checkout ⇒</a>
+														<a href="#" id="checkoutbtn" class="button button-3d nomargin fright tab-linker" rel="2">Checkout ⇒</a>
 
 													</div>
 													<div id="ptab2" aria-labelledby="ui-id-2" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-hidden="true" style="display: none;">
@@ -299,7 +299,7 @@
 
 														<div class="line"></div>
 														<a href="#" class="button button-3d nomargin tab-linker" rel="1">Previous</a>
-														<a href="#" class="button button-3d nomargin fright tab-linker" rel="3" >Next</a>
+														<a id="nextbtn" href="#" class="button button-3d nomargin fright tab-linker" rel="3" >Next</a>
 													</div>
 													<div id="ptab3" aria-labelledby="ui-id-3" class="ui-tabs-panel ui-widget-content ui-corner-bottom" role="tabpanel" aria-hidden="true" style="display: none;">
 														<div class="form-group">
@@ -458,6 +458,67 @@
 			listItems()
 			bindprice()
 			bindquantity()
+			// <li id="li1" class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="ptab1" aria-labelledby="ui-id-1" aria-selected="true" aria-expanded="true">
+			// 	<a href="#ptab1" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-1">1</a>
+			// 	<h5>Items Detail</h5>
+			// </li>
+			// <li id="li2" class="ui-state-default ui-corner-top ui-state-disabled" role="tab" tabindex="-1" aria-controls="ptab2" aria-labelledby="ui-id-2" aria-selected="false" aria-expanded="false">
+			// 	<a href="#ptab2" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-2">2</a>
+			// 	<h5>Account Detail</h5>
+			// </li>
+			// <li id="li3" class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab3" aria-labelledby="ui-id-3" aria-selected="false" aria-expanded="false">
+			// 	<button href="#ptab3"   disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-3">3</button>
+			// 	<h5>Summary</h5>
+			// </li>
+			// <li id="li4" class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="ptab4" aria-labelledby="ui-id-4" aria-selected="false" aria-expanded="false">
+			// 	<button href="#ptab4" disabled="disabled"   class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-4">4</button>
+			// 	<h5>Complete</h5>
+			// </li>
+			$('#checkoutbtn').on('click',function () {
+				$("#li2").attr("aria-expanded1","true")
+				$("#li2").attr("aria-selected","true")
+			})
+			$("#nextbtn").on('click',function () {
+				$("#li3").html(`
+				<a href="#ptab3" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-3">3</a>
+				<h5>Summary</h5>`)
+				$("#li2").attr("aria-expanded","false")
+				$("#li2").attr("aria-selected","false")
+				$("#li3").attr("aria-expanded","true")
+				$("#li3").attr("aria-selected","true")
+				$("#li2").removeClass("ui-state-active")
+				$("#li2").removeClass("ui-tabs-active")
+				$("#li3").addClass("ui-state-active")
+				$("#li3").addClass("ui-tabs-active")
+				$("#ptab2").attr("aria-hidden","true")
+				$("#ptab3").attr("aria-hidden","false")
+				$("#ptab2").css("display","none")
+				$("#ptab3").css("display","block")
+
+			})
+			function btnptab3() {
+				$("#li4").html(`
+				<a href="#ptab4" class="i-circled i-bordered i-alt divcenter ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-4">4</a>
+				<h5>Complete</h5>`)
+				$("#li2").attr("aria-expanded","false")
+				$("#li2").attr("aria-selected","false")
+				$("#li3").attr("aria-expanded","false")
+				$("#li3").attr("aria-selected","false")
+				$("#li4").attr("aria-expanded","true")
+				$("#li4").attr("aria-selected","true")
+				$("#li2").removeClass("ui-state-active")
+				$("#li3").removeClass("ui-state-active")
+				$("#li2").removeClass("ui-state-active")
+				$("#li3").removeClass("ui-tabs-active")
+				$("#li4").addClass("ui-tabs-active")
+				$("#li4").addClass("ui-state-active")
+				$("#ptab2").attr("aria-hidden","true")
+				$("#ptab3").attr("aria-hidden","true")
+				$("#ptab4").attr("aria-hidden","false")
+				$("#ptab2").css("display","none")
+				$("#ptab3").css("display","none")
+				$("#ptab4").css("display","block")
+			}
 			$("#input-11").fileinput({
 				maxFileCount: 10,
 				allowedFileTypes: ["image", "video"]
@@ -579,6 +640,7 @@
 				$("#formphoto").submit()
 			})
 			$("#order").unbind().on("click", function(event) {
+				btnptab3()
 				$("#ajaxform").submit(function(e)
 				{
 						var postData = $(this).serializeArray();
@@ -638,6 +700,7 @@
 										}
 										setTimeout(function functionName() {
 											$('#ui-id-1').trigger('click')
+											$("#li4").removeClass("ui-tabs-active")
 											$('#ptab4').html("")
 										},1700)
 								},
