--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -62,8 +62,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/home" class="standard-logo" data-dark-logo="images/logo-super.png"><img src="images/logo-super.svg" width="200"alt="Superman Logo"></a>
-						<a href="/home" class="retina-logo" data-dark-logo="images/logo-super.png"><img src="images/logo-super.png" width="200"alt="Superman Logo"></a>
+						<a href="/home" class="standard-logo" data-dark-logo="images/logo-super.svg"><img src="images/logo-super.svg" width="200"alt="Superman Logo"></a>
+						<a href="/home" class="retina-logo" data-dark-logo="images/logo-super.svg"><img src="images/logo-super.svg" width="200"alt="Superman Logo"></a>
 				</div><!-- #logo end -->
 					<!-- Primary Navigation
 					============================================= -->
@@ -94,7 +94,7 @@
 					<div class="row clearfix">
 
 						<div class="col-sm-12">
-								<h3>Superman Dashboard</h3>								
+								<h3>Superman Dashboard</h3>
 								<ul class="nav nav-tabs nav-justified">
 									<li class="active"><a href="/cms-transaction"><i class="icon-note"></i> Transaction</a></li>
 									<li class=""><a href="/cms-user"><i class="icon-user4"></i> User</a></li>
