--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>App Landing | Superman</title>
+	<title>Superman Application| Recycle Company</title>
 
 
 <style>
