--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>App Landing | Canvas</title>
+	<title>Superman Application| Recycle Company</title>
 </head>
 
 <body class="stretched">
@@ -106,7 +106,7 @@
 								</div>
 								<a href="#modal-register" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Register Now</a>
 								<a href="https://www.youtube.com/watch?v=N_r349riLEE" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a>
-							
+
 							</div>
 						</div>
 					</div>
