--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1158,15 +1158,16 @@ function resultPost (result){
 
 							if(result.data[k].transactions){
 								for (let i = 0; i < result.data[k].transactions.length; i++) {
-										var nominal = String(result.data[k].transactions[i].nominal);
-										var nominalDel = nominal.replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
-
+									var nominal = String(result.data[k].transactions[i].nominal);
+									var nominalDel = nominal.replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+									var status = `<span class="label label-success">${result.data[k].transactions[i].status}</span>`
+									if (result.data[k].transactions[i].status == 'UnPaid') status = `<span class="label label-danger">${result.data[k].transactions[i].status}</span>`
 									var listrequestHTML = `
 									<tr>
 										<td>${~~(i+1)}</td>
 										<td>${result.data[k].transactions[i].recipient}</td>
 										<td>IDR ${nominalDel}</td>
-										<td><span class="label label-success">${result.data[k].transactions[i].status}</span></td>
+										<td><span class="label label-success">${status}</span></td>
 									</tr>`
 									$(`#${result.data[k]._id}bodylistgudang`).append(listrequestHTML)
 								}
