--- a/views/home.ejs
+++ b/views/home.ejs
@@ -388,7 +388,18 @@
 
 		</section>
 		<!-- #content end -->
+		<div id="modalprofilemessage" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-body">
+					<div class="modal-content">
+						<div class="modal-header" id="modal-header-message">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						</div>
 
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- Footer
 		============================================= -->
 		<footer id="footer" style="background-color: #FFF;">
@@ -450,6 +461,20 @@
 	<script>
 		var trindexdetail = 1
 		var itemsglobal = ""
+		function bindviewProfileMessage() {
+
+			$('.entry-image a img').each(function () {
+				var imgsrc = $(this).attr('src')
+				$(this).bind('click',function () {
+					viewProfileMessage(imgsrc)
+				})
+			})
+		}
+		function viewProfileMessage(image) {
+			$('#profilemessage').remove()
+			var contentdetailreload = `<div id='profilemessage'><center><img src='${image}' /></center></div>`
+			$(contentdetailreload).insertAfter('#modal-header-message')
+		}
 		jQuery(document).ready(function($) {
 			var trindex = 2
 			var trindexdetail = 1
@@ -458,6 +483,7 @@
 			listItems()
 			bindprice()
 			bindquantity()
+
 			$('#previous1').unbind().on('click',function () {
 				ptab1btn()
 			})
@@ -573,6 +599,7 @@
 				$("#ptab3").css("display","none")
 				$("#ptab4").css("display","block")
 			}
+
 			$("#input-11").fileinput({
 				maxFileCount: 10,
 				allowedFileTypes: ["image", "video"]
@@ -897,7 +924,7 @@ function resultPost (result){
 		<div class="panel-heading">
 			<div class="spost clearfix">
 				<div class="entry-image">
-					<a href="#" class="nobg"><img class="img-circle" src="${result.data.userId.profilePicture}" alt=""></a>
+					<a class="nobg"><img class="img-circle" src="${result.data.userId.profilePicture}" alt="" data-toggle="modal" data-target="#modalprofilemessage"></a>
 				</div>
 				<div class="entry-c">
 					<div class="entry-title">
@@ -914,7 +941,7 @@ function resultPost (result){
 		${imagemessage}
 		</div>
 		<div class="panel-footer">
-		<a href="#${result.data._id}likes" mark=${result.data._id} class="leftmargin-sm comment-like-btn" id=${result.data._id}btn-comment-like><i class="icon-like"></i> ${result.data.likes.length} Likes</a>
+		<a href="#${result.data._id}likes" mark=${result.data._id} class="leftmargin-sm comment-like-btn" id=${result.data._id}btn-comment-like data-trigger='hover' data-placement="top"><i class="icon-like"></i> ${result.data.likes.length} Likes</a>
 
 		<a href="#${result.data._id}btn-comment-list" mark=${result.data._id} class="leftmargin-sm comment-list-btn" id=${result.data._id}btn-comment-list><i class="icon-comments"></i> ${result.data.comments.length} Comments</a>
 		</div>
@@ -974,7 +1001,7 @@ function resultPost (result){
 									<div class="panel-heading">
 										<div class="spost clearfix">
 											<div class="entry-image">
-												<a href="#" class="nobg"><img class="img-circle" src=${imgsrc} alt=""></a>
+												<a class="nobg"><img class="img-circle" src=${imgsrc} alt="" data-toggle="modal" data-target="#modalprofilemessage"></a>
 											</div>
 											<div class="entry-c">
 												<div class="entry-title">
@@ -993,7 +1020,7 @@ function resultPost (result){
 									</div>
 									<div class="panel-footer">
 
-									<a href="#${result.data[i]._id}likes" mark=${result.data[i]._id} class="leftmargin-sm comment-like-btn" id=${result.data[i]._id}btn-comment-like><i class="icon-like"></i> ${result.data[i].likes.length} Likes</a>
+									<a href="#${result.data[i]._id}likes" mark=${result.data[i]._id} class="leftmargin-sm comment-like-btn" id=${result.data[i]._id}btn-comment-like data-trigger='hover' data-placement="top"><i class="icon-like"></i> ${result.data[i].likes.length} Likes</a>
 									<a  mark=${result.data[i]._id} class="leftmargin-sm comment-list-btn" id=${result.data[i]._id}btn-comment-list><i class="icon-comments"></i> ${result.data[i].comments.length} Comments</a>
 									</div>
 											<div class="panel-footer" id=${result.data[i]._id}panel-footer>
@@ -1010,7 +1037,7 @@ function resultPost (result){
 								for (var j= 0 ; j< result.data[i].comments.length;j++){
 								var commentHTML = `
 								<div class="entry-image">
-									<a href="#" class="nobg"><img class="img-circle" src="${result.data[i].comments[j].commenter.profilePicture}" alt=""></a>
+									<a class="nobg"><img class="img-circle" src="${result.data[i].comments[j].commenter.profilePicture}" alt="" data-toggle="modal" data-target="#modalprofilemessage"></a>
 								</div>
 								<div class="entry-c">
 									<div class="entry-title">
@@ -1040,6 +1067,7 @@ function resultPost (result){
 									})
 
 									bindcommentbox()
+									bindviewProfileMessage()
 									}
 		        }
 		    })
@@ -1081,7 +1109,7 @@ function resultPost (result){
  							<div class="panel-footer">
  							<div class="spost clearfix" style="display: block;">
  							<div class="entry-image">
- 								<a href="#" class="nobg"><img class="img-circle" src="${imgprofile}" alt=""></a>
+ 								<a href="#" class="nobg"><img class="img-circle" src="${imgprofile}" alt="" data-toggle="modal" data-target="#modalprofilemessage"></a>
  							</div>
  							<div class="entry-c">
  								<div class="entry-title">
@@ -1167,7 +1195,7 @@ function resultPost (result){
 										<td>${~~(i+1)}</td>
 										<td>${result.data[k].transactions[i].recipient}</td>
 										<td>IDR ${nominalDel}</td>
-										<td><span class="label label-success">${status}</span></td>
+										<td>${status}</td>
 									</tr>`
 									$(`#${result.data[k]._id}bodylistgudang`).append(listrequestHTML)
 								}
